[package]
name = "graphql-reproducer"
version = "0.1.0"
authors = ["Christoph Siedentop <crates@siedentop.name>"]
edition = "2018"

[dependencies]
color-eyre = "0.5.7"
env_logger = "0.8.2"
eyre = "0.6.3"
graphql_client = { git = "https://github.com/siedentop/graphql-client.git" }
log = "0.4.11"
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
serde = "1.0.117"
tokio = { version = "0.3.4", features = ["full"] }

